// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WhyChooseLeasing /> renders correctly with warranty 1`] = `
<div
  className="pdp--feature-grid -col2"
>
  <h2
    className="heading -black -lead"
  >
    Why Choose Leasing?
  </h2>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="BrandNewCar"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Brand New Vehicles
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="WarrantyRosette5"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Full 5 Year Warranty
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="Calendar"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Fixed Monthly Payments
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="NoMOT"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        No MOT Costs
      </div>
    </div>
  </div>
</div>
`;

exports[`<WhyChooseLeasing /> renders correctly with warranty equal N/A 1`] = `
<div
  className="pdp--feature-grid -col2"
>
  <h2
    className="heading -black -lead"
  >
    Why Choose Leasing?
  </h2>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="BrandNewCar"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Brand New Vehicles
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="WarrantyRosetteFull"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Full Manufacturer Warranty
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="Calendar"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        Fixed Monthly Payments
      </div>
    </div>
  </div>
  <div
    className="pdp--feature-grid--item"
  >
    <i
      className="icon -orange -xlarge"
      name="NoMOT"
    >
      <svg
        height="1em"
        viewBox="0 0 512 512"
        width="1em"
      >
        <path
          d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeMiterlimit": 10,
              "strokeWidth": 32,
            }
          }
        />
        <path
          d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="135.87 256 159.46 232.4 184.13 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
        <polyline
          points="376.13 256 352.54 279.6 327.87 256"
          style={
            Object {
              "fill": "none",
              "stroke": "var(--class-color)",
              "strokeLinecap": "round",
              "strokeLinejoin": "round",
              "strokeWidth": 32,
            }
          }
        />
      </svg>
    </i>
    <div>
      <div
        className="heading -black -regular"
      >
        No MOT Costs
      </div>
    </div>
  </div>
</div>
`;
